<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/recycler"
        android:layout_weight="1"/>
    <!-- Cette balise permet de servir correctement le recycler. Ne pas retirer -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/editionProfil"
        android:visibility="gone">
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:foreground="@drawable/cadre_profil_edition"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageProfilEdition"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/imageProfil"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nomEdition"
                android:inputType="text"
                android:autofillHints="username,name"
                android:hint="@string/nomProfil"
                android:textSize="26sp"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:layout_weight="1" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/editerProfil"
                android:id="@+id/sauvegarder"
                android:src="@drawable/ic_sauvegarder"
                android:backgroundTint="#00000000"
                android:paddingVertical="10dp"
                android:paddingHorizontal="15dp"
                android:adjustViewBounds="true"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/selectionner"
        android:textSize="24sp"
        android:id="@+id/changement"
        android:enabled="false"/>
</LinearLayout>